partner subpage add

--- a/partners/allianz.html
+++ b/partners/allianz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia.">
-    <title>ZZ-Consulting Allianz</title>
+    <title>Allianz ZZ-Consulting </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/Icons/apple-touch-icon.png">
@@ -64,7 +64,7 @@
             <div class="partner-left">
                 <div class="partner-description-box">
                     <div class="partner-header">
-                        <img src="/resources/partners/ALLIANZ_logo.png" alt="PZU">
+                        <img src="/resources/partners/ALLIANZ_logo.png" alt="Allianz">
                     </div>
                     <div class="partner-description">
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora excepturi et ullam at dolores. Autem id tempore maiores dicta architecto fugit quaerat officiis obcaecati adipisci, harum quam deleniti facilis enim.</p>
