--- a/partners/partners.html
+++ b/partners/partners.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia.">
-    <title>PZU ZZ-Consulting </title>
+    <title>Ergo-Hestia ZZ-Consulting </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/Icons/apple-touch-icon.png">
@@ -58,48 +58,6 @@
 
 
 <section id="partner">
-    <h1>Partnerzy</h1>
-    <div class="partner-container">
-        <div class="partner-box container">
-            <div class="partner-left">
-                <div class="partner-description-box">
-                    <div class="partner-header">
-                        <img src="/resources/partners/PZU_logo.webp" alt="PZU">
-                    </div>
-                    <div class="partner-description">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora excepturi et ullam at dolores. Autem id tempore maiores dicta architecto fugit quaerat officiis obcaecati adipisci, harum quam deleniti facilis enim.</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora excepturi et ullam at dolores. Autem id tempore maiores dicta architecto fugit quaerat officiis obcaecati adipisci, harum quam deleniti facilis enim.</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora excepturi et ullam at dolores. Autem id tempore maiores dicta architecto fugit quaerat officiis obcaecati adipisci, harum quam deleniti facilis enim.</p>
-                        <p>Infolinia: 000-000-000 <br> Zgłaszanie szkód: mail@pzu.pl</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="partner-right">
-                <div class="partner-nav">
-                    <ul>
-                        <li><a href="/partnerzy/allianz/">Allianz</a></li>
-                        <li><a href="/partnerzy/generali/">Generali</a></li>
-                        <li><a href="/partnerzy/hdi/">HDI</a></li>
-                        <li><a href="/partnerzy/interrisk/">InterRisk</a></li>
-                        <li><a href="/partnerzy/link4/">Link 4</a></li>
-                        <li><a href="/partnerzy/mtu/">MTU</a></li>
-                        <li><a href="/partnerzy/proama/">Proama</a></li>
-                        <li class="partner-active"><a href="/partnerzy/pzu/">PZU</a></li>
-                        <li><a href="/partnerzy/uniqa/">Uniqa</a></li>
-                        <li><a href="/partnerzy/warta/">Warta</a></li>
-                        <li><a href="/partnerzy/wiener/">Wiener</a></li>
-                        <li><a href="/partnerzy/ergo-hestia/">Ergo Hestia</a></li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-
-
 
 </section>
 
