--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <li><a class="menuItem" href="/">Strona Główna</a></li>
                         <li><a class="menuItem" href="/about">O Nas</a></li>
                         <li><a class="menuItem" href="/forms">Druki</a></li>
+                        <li><a class="menuItem" href="/partnerzy">Partnerzy</a></li>
                         <li><a class="menuItem" href="#">Narzędzia</a></li>
                         <li><a class="menuItem" href="/contact">Kontakt</a></li>
                     </ul>
@@ -52,6 +53,7 @@
                 <li><a href="/" class="nav-active">Strona Główna</a></li>
                 <li><a href="/about">O Nas</a></li>
                 <li><a href="/forms">Druki</a></li>
+                <li><a href="/partnerzy">Partnerzy</a></li>
                 <li><a href="/gugu">Narzędzia</a></li>
                 <li><a href="/contact">Kontakt</a></li>
             </ul>
@@ -148,7 +150,7 @@
                 <h2>20 towarzystw w jednym miejscu!</h2>
             </div>
             <div class="partners-list">
-                <a href="/partnerzy/allianz/"><img src="/resources/partners/ALLIANZ_logo.webp" alt="Allianz"></a>
+                <a href="/partnerzy/allianz/"><img src="/resources/partners/ALLIANZ_logo.png" alt="Allianz"></a>
                 <a href="/partnerzy/generali/"><img src="/resources/partners/GENERALI_logo.webp" alt="Generali"></a>
                 <a href="/partnerzy/hdi/"><img src="/resources/partners/HDI_logo.webp" alt="HDI"></a>
                 <a href="/partnerzy/interrisk/"><img src="/resources/partners/INTERRISK_logo.webp" alt="interrisk"></a>
