--- a/partners/partners.html
+++ b/partners/partners.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Agencja ubezpieczeniowa to miejsce, gdzie możesz uzyskać informacje i zakupić różnego rodzaju ubezpieczenia.">
-    <title>Ergo-Hestia ZZ-Consulting </title>
+    <title>ZZ-Consulting Partnerzy </title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/Icons/apple-touch-icon.png">
@@ -35,6 +35,7 @@
                     <li><a class="menuItem" href="/">Strona Główna</a></li>
                     <li><a class="menuItem" href="/about">O Nas</a></li>
                     <li><a class="menuItem" href="/forms">Druki</a></li>
+                    <li><a class="menuItem" href="/partnerzy">Partnerzy</a></li>
                     <li><a class="menuItem" href="#">Narzędzia</a></li>
                     <li><a class="menuItem" href="/contact">Kontakt</a></li>
                 </ul>
@@ -51,13 +52,146 @@
             <li><a href="/">Strona Główna</a></li>
             <li><a href="/about">O Nas</a></li>
             <li><a href="/forms">Druki</a></li>
+            <li><a href="/partnerzy" class="nav-active">Partnerzy</a></li>
             <li><a href="/gugu">Narzędzia</a></li>
             <li><a href="/contact">Kontakt</a></li>
         </ul>
     </nav>
 
 
-<section id="partner">
+<section id="partners-home">
+
+    <h1>Partnerzy</h1>
+
+    <div class="home-container">
+        <div class="home-box container">
+            <div class="partners-box">
+                <a href="/partnerzy/allianz">
+                <div class="home-logo">
+                    <img src="/resources/partners/ALLIANZ_logo.png" alt="allianz-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/allianz">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/ergo-hestia">
+                <div class="home-logo">
+                    <img src="/resources/partners/ERGO_logo.webp" alt="ERGO-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/ergo-hestia">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/generali">
+                <div class="home-logo">
+                    <img src="/resources/partners/GENERALI_logo.webp" alt="GENERALI-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/generali">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/hdi">
+                <div class="home-logo">
+                    <img src="/resources/partners/HDI_logo.webp" alt="HDI-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/hdi">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/interrisk">
+                <div class="home-logo">
+                    <img src="/resources/partners/INTERRISK_logo.webp" alt="interrisk-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/interrisk">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/link4">
+                <div class="home-logo">
+                    <img src="/resources/partners/LINK4_logo.webp" alt="link4-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/link4">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/mtu">
+                <div class="home-logo">
+                    <img src="/resources/partners/MTU_logo.webp" alt="mtu-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/mtu">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/proama">
+                <div class="home-logo">
+                    <img src="/resources/partners/PROAMA_logo.webp" alt="proama-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/proama">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/pzu">
+                <div class="home-logo">
+                    <img src="/resources/partners/PZU_logo.webp" alt="pzu-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/pzu">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/uniqa">
+                <div class="home-logo">
+                    <img src="/resources/partners/UNIQA_logo.webp" alt="uniqa-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/uniqa">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/warta">
+                <div class="home-logo">
+                    <img src="/resources/partners/WARTA_logo.webp" alt="warta-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/warta">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+            <div class="partners-box">
+                <a href="/partnerzy/wiener">
+                <div class="home-logo">
+                    <img src="/resources/partners/WIENER_logo.webp" alt="wiener-logo">
+                </div>
+                <div class="home-button">
+                    <a class="partners-link" href="/partnerzy/wiener">Zobacz więcej!</a>
+                </div>
+                </a>
+            </div>
+
+        </div>
+    </div>
+
+
+
+
 
 </section>
 
