--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
                         <li><a class="menuItem" href="/">Strona Główna</a></li>
                         <li><a class="menuItem" href="/about">O Nas</a></li>
                         <li><a class="menuItem" href="/forms">Druki</a></li>
+                        <li><a class="menuItem" href="/partnerzy">Partnerzy</a></li>
                         <li><a class="menuItem" href="#">Narzędzia</a></li>
                         <li><a class="menuItem" href="/contact">Kontakt</a></li>
                     </ul>
@@ -50,7 +51,8 @@
                 <li><a href="/">Strona Główna</a></li>
                 <li><a href="/about" class="nav-active">O Nas</a></li>
                 <li><a href="/forms">Druki</a></li>
-                <li><a href="#">Narzędzia</a></li>
+                <li><a href="/partnerzy">Partnerzy</a></li>
+                <li><a href="/gugu">Narzędzia</a></li>
                 <li><a href="/contact">Kontakt</a></li>
             </ul>
         </nav>
