partners divs change
Add anchor element to whole div

--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,9 @@
                 <div class="left-form">
                     <h2>Formularz Kontaktowy</h2>
                     <form>      
-                        <input name="name" type="text" class="feedback-input" placeholder="Imię" required />   
-                        <input name="email" type="text" class="feedback-input" placeholder="E-mail" required />
-                        <textarea name="text" class="feedback-input" placeholder="Wiadomość" required></textarea>
+                        <input name="name" type="text" class="contact-input" placeholder="Imię" required />   
+                        <input name="email" type="text" class="contact-input" placeholder="E-mail" required />
+                        <textarea name="text" class="contact-input" placeholder="Wiadomość" required></textarea>
                         <input type="submit" value="WYŚLIJ"/>
                       </form>
                 </div>
