--- a/partners/partners.html
+++ b/partners/partners.html
@@ -65,147 +65,110 @@
 
     <div class="home-container">
         <div class="home-box container">
-            <div class="partners-box">
-                <a href="/partnerzy/allianz">
+            <a class="partners-box" href="/partnerzy/allianz">
+
                 <div class="home-logo">
                     <img src="/resources/partners/ALLIANZ_logo.png" alt="allianz-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/allianz">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/ergo-hestia">
+            </a>
+            <a class="partners-box" href="/partnerzy/ergo-hestia">
                 <div class="home-logo">
                     <img src="/resources/partners/ERGO_logo.webp" alt="ERGO-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/ergo-hestia">Zobacz więcej!</a>
+                    <span>Zobacz więcej</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/generali">
+
+            </a>
+            <a class="partners-box" href="/partnerzy/generali">
                 <div class="home-logo">
                     <img src="/resources/partners/GENERALI_logo.webp" alt="GENERALI-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/generali">Zobacz więcej!</a>
+                    <span>Zobacz więcej</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/hdi">
+
+            </a>
+            <a class="partners-box"  href="/partnerzy/hdi">
                 <div class="home-logo">
                     <img src="/resources/partners/HDI_logo.webp" alt="HDI-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/hdi">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/interrisk">
+            </a>
+            <a class="partners-box" href="/partnerzy/interrisk">
+
                 <div class="home-logo">
                     <img src="/resources/partners/INTERRISK_logo.webp" alt="interrisk-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/interrisk">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/link4">
+
+            </a>
+            <a class="partners-box" href="/partnerzy/link4">
                 <div class="home-logo">
                     <img src="/resources/partners/LINK4_logo.webp" alt="link4-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/link4">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/mtu">
+            </a>
+            <a class="partners-box" href="/partnerzy/mtu">
                 <div class="home-logo">
                     <img src="/resources/partners/MTU_logo.webp" alt="mtu-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/mtu">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/proama">
+            </a>
+            <a class="partners-box" href="/partnerzy/proama">
                 <div class="home-logo">
                     <img src="/resources/partners/PROAMA_logo.webp" alt="proama-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/proama">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/pzu">
+            </a>
+            <a class="partners-box" href="/partnerzy/pzu">
                 <div class="home-logo">
                     <img src="/resources/partners/PZU_logo.webp" alt="pzu-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/pzu">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/uniqa">
+            </a>
+            <a class="partners-box" href="/partnerzy/uniqa">
                 <div class="home-logo">
                     <img src="/resources/partners/UNIQA_logo.webp" alt="uniqa-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/uniqa">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/warta">
+            </a>
+            <a class="partners-box" href="/partnerzy/warta">
                 <div class="home-logo">
                     <img src="/resources/partners/WARTA_logo.webp" alt="warta-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/warta">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-            <div class="partners-box">
-                <a href="/partnerzy/wiener">
+            </a>
+            <a class="partners-box" href="/partnerzy/wiener">
                 <div class="home-logo">
                     <img src="/resources/partners/WIENER_logo.webp" alt="wiener-logo">
                 </div>
                 <div class="home-button">
-                    <a class="partners-link" href="/partnerzy/wiener">Zobacz więcej!</a>
+                    <span>Zobacz więcej!</span>
                 </div>
-                </a>
-            </div>
-
+            </a>
         </div>
     </div>
-
-
-
-
-
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
 <footer class="footer">
     <div class="footer-right">
         <img src="/resources/logo.webp" alt="logo">
