Mobile responsive for partner home page/ add mobile back button

--- a/partners/allianz.html
+++ b/partners/allianz.html
@@ -72,11 +72,14 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora excepturi et ullam at dolores. Autem id tempore maiores dicta architecto fugit quaerat officiis obcaecati adipisci, harum quam deleniti facilis enim.</p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora excepturi et ullam at dolores. Autem id tempore maiores dicta architecto fugit quaerat officiis obcaecati adipisci, harum quam deleniti facilis enim.</p>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora excepturi et ullam at dolores. Autem id tempore maiores dicta architecto fugit quaerat officiis obcaecati adipisci, harum quam deleniti facilis enim.</p>
-                        <p>Infolinia: 000-000-000 <br> Zgłaszanie szkód: mail@pzu.pl</p>
+                        <p class="contact-description">Infolinia: 000-000-000</p>
+                        <p class="contact-description">Zgłaszanie szkód: mail@pzu.pl</p>
                     </div>
                 </div>
             </div>
-
+            <div class="partner-back">
+                <a class="js-back"><i class="fa-solid fa-angles-left"></i></a>
+            </div>
             <div class="partner-right">
                 <div class="partner-nav">
                     <ul>
@@ -95,6 +98,11 @@
                     </ul>
                 </div>
             </div>
+
+
+
+
+
 
         </div>
     </div>
