--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="footer-left">
             <span>&copy; 2023</span>
             <span> <a href="#">ZZ-Consulting</a>. <br>Wszystkie prawa zastrzeżone.</span>
-            <p>Created by <a href="#"><img src="/resources/aodesign.webp" alt="AODesign logotype"></a></p>
+            <p>Created by <a href="#"><img src="/resources/AODesign.webp" alt="AODesign logotype"></a></p>
         </div>
     </footer>
     <i id="pageUp" class="fa-solid fa-circle-arrow-up"></i>
