Small change to nodemailer function

--- a/success.html
+++ b/success.html
@@ -60,6 +60,7 @@
 
         <section id="success" class="container center">
             <h1>Poprawnie wysłano Email!</h1>
+            <h1>Odpowiemy tak szybko jak to możliwe!</h1>
             <a href="/"> <i class="fa-solid fa-angles-left"></i> Wróć na stronę główną <i class="fa-solid fa-angles-left"></i></a>
             <div> </div>
         </section>
