--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,8 @@
       
                 <div class="left-form">
                     <h2>Formularz Kontaktowy</h2>
-                    <form action="#" method="POST">   
-                        <input name="name" id="name" type="text" class="contact-input" placeholder="Imię"  />                           <input name="email" id="email" type="text" class="contact-input" placeholder="E-mail"  />
+                    <form action="#" method="POST">
+                        <input name="name" id="name" type="text" class="contact-input" placeholder="Imię i Nazwisko"  />                           <input name="email" id="email" type="text" class="contact-input" placeholder="E-mail"  />
                         <input name="subject" id="subject" type="text" class="contact-input" placeholder="Temat"  />
                         <textarea name="message" id="message" class="contact-input" placeholder="Wiadomość" ></textarea>
                         <input type="submit" value="WYŚLIJ"/>
