about site change

--- a/about.html
+++ b/about.html
@@ -68,28 +68,28 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis facere impedit itaque officiis sequi suscipit nulla delectus dolor laudantium velit dolorem ex modi quis eveniet non rerum explicabo esse, tempore necessitatibus repellat. Libero beatae rem ipsam necessitatibus in, exercitationem id corrupti aut quam eum distinctio aliquid voluptates temporibus! Provident, ullam!</p>
     
             </div>
-            <div class="right-site right-img what-we-do">
+            <div class="right-site right-img">
                 <img src="/resources/aboutus.webp" alt="o nas">    
             </div>
         </div>
-        <div class="about-us container reveal fade-bottom">
-            <div class="right-site left-img">
+        <div class="about-us container">
+            <div class="right-site left-img reveal fade-left">
                 <img src="/resources/employee.webp" alt="employee">    
             </div>
-            <div class="left-site right-descr">
+            <div class="left-site right-descr reveal fade-right">
                 <h3>Poznaj nasz zespół</h3>
                 <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis facere impedit itaque officiis sequi suscipit nulla delectus dolor laudantium velit dolorem ex modi quis eveniet non rerum explicabo esse, tempore necessitatibus repellat. Libero beatae rem ipsam necessitatibus in, exercitationem id corrupti aut quam eum distinctio aliquid voluptates temporibus! Provident, ullam!</p>
             </div>
 
         </div>
-        <div class="about-container container reveal fade-bottom">
-            <div class="left-site offer-box">
+        <div class="about-container container">
+            <div class="left-site offer-box reveal fade-left">
                 <img src="/resources/anonymous.webp" alt="picture">
                 <h3>Imię i nazwisko</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p>
             </div>
-            <div class="right-site right-img offer-box">
+            <div class="right-site right-img offer-box reveal fade-right">
                 <img src="/resources/anonymous.webp" alt="picture">
                 <h3>Imię i nazwisko</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, iusto quod est repellat recusandae magni debitis. Consectetur pariatur quam iusto!</p>
